--- a/Frontend/src/pages/EmployeeList.css
+++ b/Frontend/src/pages/EmployeeList.css
@@ -3,8 +3,9 @@
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 1200px; /* Optional: Limit the maximum width */
-    margin: auto; /* Center the component */
+    width: 1200px;
+    height: 500px;
+    margin-top: 1pxs; /* Center the component */
     box-sizing: border-box;
   }
   
